--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>All Events</title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
 <h1>All Events</h1>
 
@@ -12,10 +9,17 @@
 
 <p th:unless="${events} and ${events.size()}">No events!</p>
 
-<ul>
-    <th:block th:each="event : ${events}">
-        <li th:text="${event}"></li>
-    </th:block>
-</ul>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tr th:block th:each="event : ${events}">
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
+    </tr>
+</table>
 </body>
 </html>
