--- a/coding-events/src/main/resources/templates/events/delete.html
+++ b/coding-events/src/main/resources/templates/events/delete.html
@@ -7,7 +7,7 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post">
+<form method="post" action="/events/delete">
 
 
         <th:block th:each="event : ${events}">
