--- a/coding-events/src/main/resources/templates/eventCategories/create.html
+++ b/coding-events/src/main/resources/templates/eventCategories/create.html
@@ -11,8 +11,10 @@
     <div class="form-group">
         <label>Category
             <input th:field="${eventCategory.name}" class="form-control">
+            <p class="error" th:errors="${eventCategory.name}"></p>
+<!--            <span th:errors="${eventCategory.name}" class="error"></span>-->
         </label>
-        <p class="error" th:errors="${eventCategory.name}"></p>
+
     </div>
     <div class="form-group"><
         <input type="submit" value="Create Category" class="btn btn-success">
