--- a/coding-events/src/main/resources/templates/eventCategories/index.html
+++ b/coding-events/src/main/resources/templates/eventCategories/index.html
@@ -3,8 +3,6 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>All Categories</h1>
-
 <nav th:replace="fragments :: navigation"></nav>
 
 <table class="table table-striped">
@@ -14,7 +12,7 @@
     </tr>
     </thead>
     <tr th:block th:each="category : ${categories}">
-        <td th:text="${category.name}"></td>
+        <td><a th:text="${category.name}" th:href="'/events?categoryId=' +${category.id}"></a></td>
     </tr>
 
 </table>
