--- a/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/src/main/resources/templates/events/create.html
@@ -3,8 +3,6 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>Create Event</h1>
-
 <nav th:replace="fragments :: navigation"></nav>
 
 <form method="post" action="/events/create">
@@ -16,15 +14,15 @@
     </div>
     <div class="form-group">
         <label>Description
-            <input th:field="${event.description}" class="form-control">
+            <input th:field="${event.eventDetails.description}" class="form-control">
         </label>
-        <p class="error" th:errors="${event.description}"></p>
+        <p class="error" th:errors="${event.eventDetails.description}"></p>
     </div>
     <div class="form-group">
         <label>Contact Email
-            <input th:field="${event.contactEmail}" class="form-control">
+            <input th:field="${event.eventDetails.contactEmail}" class="form-control">
         </label>
-        <p class="error" th:errors="${event.contactEmail}"></p>
+        <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
     </div>
     <div class="'form-group">
     <label>Category
@@ -39,9 +37,9 @@
     </div>
     <div class="form-group">
         <label>Location
-            <input th:field="${event.location}" class="form-control">
+            <input th:field="${event.eventDetails.location}" class="form-control">
         </label>
-        <p class="error" th:errors="${event.location}"></p>
+        <p class="error" th:errors="${event.eventDetails.location}"></p>
     </div>
     <div class="form-group"><
         <input type="submit" value="Create Event" class="btn btn-success">
