--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -3,7 +3,6 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>All Events</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
@@ -17,14 +16,16 @@
             <th>Description</th>
             <th>Contact Email</th>
             <th>Category</th>
+            <th>Location</th>
         </tr>
     </thead>
     <tr th:block th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
-        <td th:text="${event.description}"></td>
-        <td th:text="${event.contactEmail}"></td>
+        <td th:text="${event.eventDetails.description}"></td>
+        <td th:text="${event.eventDetails.contactEmail}"></td>
         <td th:text="${event.eventCategory.name}"></td>
+        <td th:text="${event.eventDetails.location}"></td>
     </tr>
 </table>
 </body>
