--- a/coding-events/src/main/resources/templates/tags/index.html
+++ b/coding-events/src/main/resources/templates/tags/index.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<header th:replace="fragments :: header"></header>
+<nav th:replace="fragments :: navigation"></nav>
 
 <table class="table table-striped">
     <thead>
