--- a/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/src/main/resources/templates/events/create.html
@@ -24,7 +24,7 @@
         </label>
         <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
     </div>
-    <div class="'form-group">
+    <div class="form-group">
     <label>Category
         <select th:field="${event.eventCategory}">
         <option th:each="eventCategory : ${categories}"
@@ -35,12 +35,12 @@
         <p class="error" th:errors="${event.eventCategory}"></p>
     </label>
     </div>
-    <div class="form-group">
-        <label>Location
-            <input th:field="${event.eventDetails.location}" class="form-control">
-        </label>
-        <p class="error" th:errors="${event.eventDetails.location}"></p>
-    </div>
+<!--    <div class="form-group">-->
+<!--        <label>Location-->
+<!--            <input th:field="${event.eventDetails.location}" class="form-control">-->
+<!--        </label>-->
+<!--        <p class="error" th:errors="${event.eventDetails.location}"></p>-->
+<!--    </div>-->
     <div class="form-group"><
         <input type="submit" value="Create Event" class="btn btn-success">
     </div>
