--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -16,7 +16,7 @@
             <th>Description</th>
             <th>Contact Email</th>
             <th>Category</th>
-            <th>Location</th>
+<!--            <th>Location</th>-->
         </tr>
     </thead>
     <tr th:block th:each="event : ${events}">
@@ -25,7 +25,7 @@
         <td th:text="${event.eventDetails.description}"></td>
         <td th:text="${event.eventDetails.contactEmail}"></td>
         <td th:text="${event.eventCategory.name}"></td>
-        <td th:text="${event.eventDetails.location}"></td>
+<!--        <td th:text="${event.eventDetails.location}"></td>-->
     </tr>
 </table>
 </body>
